# hive

./: .gitignore  Cargo.toml  HIVE_TUI_SPEC.md  QUESTION_MARKS_SPEC.md  README.md  SCROLL_MODE_SPEC.md  hive  install.sh  uninstall.sh
example/: .hive.yaml
examples/: multi.hive.yaml  simple.hive.yaml  tasks.yaml
src/: lib.rs  main.rs
src/app/: mod.rs  palette.rs  sidebar.rs  state.rs  types.rs
src/commands/: attach.rs  deinit.rs  detach.rs  doctor.rs  down.rs  layout.rs  list.rs  mod.rs  nudge.rs  open.rs  role.rs  serve.rs  setup.rs  status.rs  stop.rs  up.rs
src/config/: mod.rs  parser.rs  validation.rs
src/ipc/: mod.rs
src/projects/: mod.rs
src/pty/: mod.rs  output.rs  pane.rs
src/server/: mod.rs
src/tasks/: mod.rs  watcher.rs  yaml.rs
src/ui/: help.rs  layout.rs  mod.rs  palette.rs  pane.rs  projects.rs  sidebar.rs  status_bar.rs  tab_bar.rs  task_queue.rs  terminal.rs  title_bar.rs
src/utils/: git.rs  shell.rs
src/workspace/: config.rs  mod.rs  resolve.rs  worktree.rs
tests/: ink_input_test.js  nudge.rs  output_buffer.rs  projects.rs
