[package]
name = "hive"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
portable-pty = "0.8"

tokio = { version = "1", features = ["full"] }

serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"

notify = "7"

clap = { version = "4", features = ["derive"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

anyhow = "1"
thiserror = "1"

termsize = "0.1"
pathdiff = "0.2"
indexmap = "2"
vt100 = "0.15"
serde_json = "1"
tui-term = "0.2"

[dev-dependencies]
insta = "1"
